--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"deploy": "npm run build && npx gh-pages -d build"
+		"lint": "prettier --check . && eslint ."
 	},
 	"files": [
 		"dist",
